# swls

./: AGENT.md  CHANGELOG.md  Cargo.toml  README.md  release.toml  turtle
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
components-rs/: CHANGELOG.md  Cargo.toml  README.md
components-rs/cjs-test/: package-lock.json  package.json
components-rs/src/: error.rs  fs.rs  lib.rs  main.rs  module_state.rs
components-rs/src/components/: mod.rs  registry.rs  types.rs
components-rs/src/config/: mod.rs  registry.rs
components-rs/src/context/: expand.rs  mod.rs
components-rs/src/discovery/: mod.rs  node_modules.rs  package_json.rs
conformance/: Cargo.toml  build.rs
conformance/src/: lib.rs  main.rs
core/: CHANGELOG.md  Cargo.toml
core/src/: backend.rs  client.rs  components.rs  lang.rs  lib.rs  prelude.rs  store.rs
core/src/components/: config.rs  document.rs  mod.rs  resources.rs  type_hierarchy.rs
core/src/feature/: code_action.rs  completion.rs  diagnostics.rs  format.rs  goto_definition.rs  goto_type.rs  hover.rs  inlay.rs  mod.rs  parse.rs  references.rs  rename.rs  save.rs  semantic.rs
core/src/queries/: class_definitions.sparql  property_definitions.sparql
core/src/systems/: all.file.csv  links.rs  lov.rs  mod.rs  prefix.rs  prefix_cc.txt  properties.rs  semantics.rs  shapes.rs  typed.rs
core/src/systems/lov/: extractor.rs  fetch.rs  mod.rs  setup.rs
core/src/systems/properties/: mod.rs  query.rs  systems.rs  types.rs
core/src/systems/shapes/: data.rs  mod.rs
core/src/util/: fs.rs  mod.rs  ns.rs  token.rs  triple.rs
docs/: crates.js  help.html  settings.html  src-files.js
docs/ansi_str/: all.html  enum.Color.html  fn.get_blocks.html  index.html  sidebar-items.js  struct.AnsiBlock.html  struct.AnsiBlockIter.html  struct.AnsiSequenceEnd.html  struct.AnsiSequenceStart.html  struct.AnsiSplit.html  struct.Style.html  trait.AnsiStr.html
docs/ansitok/: all.html  enum.AnsiColor.html  enum.ElementKind.html  enum.EscapeCode.html  enum.Output.html  enum.VisualAttribute.html  fn.parse_ansi.html  fn.parse_ansi_sgr.html  index.html  sidebar-items.js  struct.AnsiIterator.html  struct.Element.html  struct.SGRParser.html
docs/anstyle_query/: all.html  fn.clicolor.html  fn.clicolor_force.html  fn.is_ci.html  fn.no_color.html  fn.term_supports_ansi_color.html  fn.term_supports_color.html  fn.truecolor.html  index.html
docs/arraydeque/: all.html  index.html  struct.ArrayDeque.html  struct.CapacityError.html  struct.Drain.html  struct.IntoIter.html  struct.Iter.html  struct.IterMut.html  trait.RangeArgument.html
docs/async_channel/: all.html  enum.TryRecvError.html  enum.TrySendError.html  fn.bounded.html  fn.unbounded.html  index.html  struct.Closed.html  struct.Receiver.html  struct.Recv.html  struct.RecvError.html  struct.Send.html  struct.SendError.html  struct.Sender.html  struct.WeakReceiver.html  struct.WeakSender.html
docs/async_executor/: all.html  index.html  struct.Executor.html  struct.LocalExecutor.html
docs/async_global_executor/: all.html  fn.block_on.html  fn.init.html  fn.init_with_config.html  fn.spawn.html  fn.spawn_blocking.html  fn.spawn_local.html  fn.spawn_more_threads.html  fn.stop_current_thread.html  fn.stop_thread.html  index.html  struct.GlobalExecutorConfig.html  struct.Task.html
docs/async_io/: all.html  fn.block_on.html  index.html  struct.Async.html  struct.Readable.html  struct.ReadableOwned.html  struct.Timer.html  struct.Writable.html  struct.WritableOwned.html  trait.IoSafe.html
docs/async_lock/: all.html  index.html  struct.Barrier.html  struct.BarrierWaitResult.html  struct.Mutex.html  struct.MutexGuard.html  struct.MutexGuardArc.html  struct.OnceCell.html  struct.RwLock.html  struct.RwLockReadGuard.html  struct.RwLockReadGuardArc.html  struct.RwLockUpgradableReadGuard.html  struct.RwLockUpgradableReadGuardArc.html  struct.RwLockWriteGuard.html  struct.RwLockWriteGuardArc.html  struct.Semaphore.html  struct.SemaphoreGuard.html  struct.SemaphoreGuardArc.html
docs/async_std/: all.html  index.html  macro.task_local.html
docs/async_task/: all.html  fn.spawn.html  fn.spawn_local.html  fn.spawn_unchecked.html  index.html  struct.Builder.html  struct.FallibleTask.html  struct.Runnable.html  struct.ScheduleInfo.html  struct.Task.html  struct.WithInfo.html  trait.Schedule.html
docs/auto_impl/: all.html  attr.auto_impl.html  index.html
docs/beef/: all.html  index.html  type.Cow.html
docs/bevy_ecs/: all.html  index.html  macro.children!.html  macro.children.html  macro.define_label.html  macro.related!.html  macro.related.html  sidebar-items.js
docs/bevy_ecs_macros/: all.html  derive.Bundle.html  derive.Component.html  derive.EntityEvent.html  derive.Event.html  derive.FromWorld.html  derive.MapEntities.html  derive.Message.html  derive.QueryData.html  (+7 more)
examples/: context.jsonld  example.ttl  index.jsonld  shape.ttl  shapes.ttl
jetbrains/: build.gradle.kts
lang-jsonld/: CHANGELOG.md  Cargo.toml
lang-jsonld/src/: cjs.rs  lib.rs
lang-jsonld/src/ecs/: completion.rs  highlight.rs  mod.rs  parse.rs
lang-jsonld/src/lang/: parser.rs  tokenizer.rs  triples.rs
lang-rdf-base/: CHANGELOG.md  Cargo.toml
lang-rdf-base/src/: lib.rs  traits.rs  triples.rs
lang-sparql/: CHANGELOG.md  Cargo.toml
lang-sparql/src/: lib.rs
lang-sparql/src/ecs/: mod.rs  parsing.rs
lang-sparql/src/lang/: model.rs  parsing.rs  tokenizer.rs
lang-trig/: CHANGELOG.md  Cargo.toml
lang-trig/src/: lib.rs
lang-trig/src/ecs/: completion.rs  mod.rs
lang-turtle/: CHANGELOG.md  Cargo.toml
lang-turtle/src/: config.rs  lib.rs  prefix.rs
lang-turtle/src/ecs/: code_action.rs  completion.rs  format.rs  mod.rs  parse.rs
lang-turtle/src/lang/: context.rs  formatter.rs  mod.rs  model.rs  parser.rs  parser2.rs  tokenizer.rs
lov/: CHANGELOG.md  Cargo.toml
lov/src/: lib.rs  min_prefixes.rs
swls/: CHANGELOG.md  Cargo.toml  build.rs
swls-token-helpers/: Cargo.toml
swls/src/: client.rs  lib.rs  main.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
token-helpers/: Cargo.toml
token-helpers/src/: helpers.rs
(+48100 files in other folders)
