[workspace.dependencies]
async-trait = "0.1.89"
bevy_ecs = { version = "0.17.3", default-features = false, features = [
  "multi_threaded",
] }
bevy_tasks = { version = "0.17.3", features = ["multi_threaded"] }
chumsky = "0.9.0"
derive_more = { version = "2", features = ["as_ref", "deref", "deref_mut", "is_variant"] }
futures = { version = "0.3.31", features = ["alloc", "executor"], default-features = false }
lazy_static = "1.5"
logos = "0.15.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
ropey = "1.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
similar = "2.7"
sophia_api = "0.9.0"
sophia_iri = "0.9.0"
sophia_turtle = "0.9.0"
tracing = "0.1"
tower-lsp = { version = "0.19.0", default-features = false, features = [
] }

[workspace]
default-members = [
  "core",
  "lang-turtle",
  "lang-jsonld",
  "lang-sparql",
  "swls",
]
members = [
  "core",
  "lov",
  "lang-turtle",
  "lang-jsonld",
  "lang-sparql",
  "swls",
  "test-utils",
  "token-helpers",
  "conformance",
]
resolver = "2"

[patch."https://github.com/ajuvercr/rudof"]
shacl_rdf = { path = "../../rudof/shacl_rdf" }
shacl_ir = { path = "../../rudof/shacl_ir" }
srdf = { path = "../../rudof/srdf" }
shacl_ast = { path = "../../rudof/shacl_ast" }
prefixmap = { path = "../../rudof/prefixmap" }
iri_s = { path = "../../rudof/iri_s" }
shacl_validation = { path = "../../rudof/shacl_validation" }
