[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Arthur Vercruysse <arthur.vercruysse@outlook.com>"]
license = "MIT"
repository = "https://github.com/semanticweblanguageserver/swls"
homepage = "https://github.com/semanticweblanguageserver/swls"

[workspace.dependencies]
async-trait = "0.1.89"
bevy_ecs = { version = "0.17.3", default-features = false, features = [
  "multi_threaded",
] }
bevy_tasks = { version = "0.17.3", features = ["multi_threaded"] }
chumsky = "0.9.0"
derive_more = { version = "2", features = ["as_ref", "deref", "deref_mut", "is_variant"] }
futures = { version = "0.3.31", features = ["alloc", "executor"], default-features = false }
lazy_static = "1.5"
logos = "0.15.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
ropey = "1.6.1"
# rdf-parsers = "0.1.8"
rdf-parsers = { version = "0.1.9" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
similar = "2.7"
sophia_api = "0.9.0"
sophia_iri = "0.9.0"
sophia_turtle = "0.9.0"
tracing = "0.1"
tower-lsp = { version = "0.19.0", default-features = false, features = [ ] }

components-rs      = { path = "components-rs",     version = "0.1.1", default-features = false }
swls-lov           = { path = "lov",               version = "0.1.0" }
swls-core          = { path = "core",              version = "0.1.0", default-features = false }
swls-token-helpers = { path = "swls-token-helpers", version = "0.1.0" }
swls-lang-rdf-base = { path = "lang-rdf-base",     version = "0.1.0" }
swls-lang-turtle   = { path = "lang-turtle",       version = "0.1.0" }
swls-lang-jsonld   = { path = "lang-jsonld",       version = "0.1.0" }
swls-lang-sparql   = { path = "lang-sparql",       version = "0.1.0" }
swls-lang-trig     = { path = "lang-trig",         version = "0.1.0" }

[workspace]
default-members = [
  "components-rs",
  "core",
  "lov",
  "lang-rdf-base",
  "lang-turtle",
  "lang-sparql",
  "lang-trig",
  "lang-jsonld",
  "swls",
]
members = [
  "components-rs",
  "core",
  "lov",
  "lang-rdf-base",
  "lang-turtle",
  "lang-sparql",
  "lang-trig",
  "lang-jsonld",
  "swls",
  "test-utils",
  "conformance",
]
resolver = "2"
exclude = ["turtle"]

