[package]
name = "conformance"

authors = ["Arthur Vercruysse <arthur.vercruysse@outlook.com>"]
edition = "2021"
version = "0.1.0"

[dependencies]
sophia_api.workspace   = true
sophia_iri.workspace   = true
chumsky.workspace   = true
sophia_turtle = "0.9.0"

lang-turtle = { path = "../lang-turtle/" }
lsp-core = { path = "../core/" }

[build-dependencies]
sophia_api.workspace   = true
sophia_iri.workspace   = true
sophia_turtle = "0.9.0"
sophia_inmem = "0.9.0"

