[package]
name = "swls-conformance"
description = "W3C conformance tests for the Semantic Web Language Server"
publish = false

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
sophia_api.workspace   = true
sophia_iri.workspace   = true
chumsky.workspace   = true
sophia_turtle = "0.9.0"

swls-lang-turtle = { path = "../lang-turtle/" }
swls-core        = { path = "../core/" }

[build-dependencies]
sophia_api.workspace   = true
sophia_iri.workspace   = true
sophia_turtle = "0.9.0"
sophia_inmem = "0.9.0"
