
[package]
name = "lsp-core"

authors = ["Arthur Vercruysse <arthur.vercruysse@outlook.com>"]
edition = "2021"
version = "0.1.0"

[features]
default = ["shapes"]
shapes = []
tokio = ["tower-lsp/runtime-tokio"]
agnostic = ["tower-lsp/runtime-agnostic"]


[dependencies]
bevy_ecs.workspace     = true
chumsky.workspace      = true
derive_more.workspace  = true
futures.workspace      = true
ropey.workspace        = true
serde.workspace        = true
serde_json.workspace   = true
sophia_api.workspace   = true
tracing.workspace      = true
tower-lsp.workspace = true

dirs = "6"
chrono = { version = "0.4.42", default-features = false, features = ["serde"] }
lazy_static = "1.5.0"
lov = { path = "../lov/" }

oxigraph = { version = "0.5.3", features = ["rdf-12", "js"], default-features=false }

shacl_rdf = { git = "https://github.com/ajuvercr/rudof", branch = "feat/wasm-2" }
shacl_ir = { git = "https://github.com/ajuvercr/rudof", branch = "feat/wasm-2" }
srdf = { git = "https://github.com/ajuvercr/rudof", branch = "feat/wasm-2" }
shacl_ast = { git = "https://github.com/ajuvercr/rudof", branch = "feat/wasm-2" }
prefixmap = { git = "https://github.com/ajuvercr/rudof", branch = "feat/wasm-2" }
iri_s = { git = "https://github.com/ajuvercr/rudof", branch = "feat/wasm-2" }
shacl_validation = { git = "https://github.com/ajuvercr/rudof", branch = "feat/wasm-2" }

oxrdf = "0.3.2"

