
[package]
name = "swls-core"
description = "Core LSP infrastructure for the Semantic Web Language Server"
keywords = ["lsp", "semantic-web", "rdf", "shacl", "sparql"]
categories = ["development-tools"]

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["shapes", "tokio"]
shapes = []
tokio = ["tower-lsp/runtime-tokio"]
agnostic = ["tower-lsp/runtime-agnostic"]


[dependencies]
bevy_ecs.workspace     = true
chumsky.workspace      = true
derive_more.workspace  = true
futures.workspace      = true
ropey.workspace        = true
serde.workspace        = true
serde_json.workspace   = true
sophia_api.workspace   = true
tracing.workspace      = true
tower-lsp.workspace = true

dirs = "6"
chrono = { version = "0.4.42", default-features = false, features = ["serde"] }
lazy_static = "1.5.0"
swls-lov.workspace = true
turtle = { path = "../turtle" }
rowan = "0.16.1"

oxigraph = { version = "0.5.3", features = ["rdf-12", "js"], default-features=false }

oxrdf = "0.3.2"

 shacl_rdf = "0.2.6"
 shacl_ir = "0.2.8"
 rudof_rdf = "0.2.8"
 shacl_ast = "0.2.6"
 prefixmap = "0.2.6"
 iri_s = "0.1.147"
 shacl_validation = { version = "0.2.8", default-features = false }

# shacl_rdf        = { path = "/tmp/rudof/shacl_rdf" }
# shacl_ir         = { path = "/tmp/rudof/shacl_ir" }
# shacl_ast        = { path = "/tmp/rudof/shacl_ast" }
# prefixmap        = { path = "/tmp/rudof/prefixmap" }
# iri_s            = { path = "/tmp/rudof/iri_s" }
# rudof_rdf        = { path = "/tmp/rudof/rudof_rdf", default-features = false }
# shacl_validation = { path = "/tmp/rudof/shacl_validation", default-features = false }

