
[package]
name = "swls-core"
description = "Core LSP infrastructure for the Semantic Web Language Server"
keywords = ["lsp", "semantic-web", "rdf", "shacl", "sparql"]
categories = ["development-tools"]

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["shapes", "tokio"]
shapes = []
tokio = ["tower-lsp/runtime-tokio"]
agnostic = ["tower-lsp/runtime-agnostic"]


[dependencies]
bevy_ecs.workspace     = true
chumsky.workspace      = true
derive_more.workspace  = true
futures.workspace      = true
ropey.workspace        = true
serde.workspace        = true
serde_json.workspace   = true
sophia_api.workspace   = true
tracing.workspace      = true
tower-lsp.workspace = true

dirs = "6"
chrono = { version = "0.4.42", default-features = false, features = ["serde"] }
lazy_static = "1.5.0"
swls-lov.workspace = true
rdf-parsers.workspace = true
rowan = "0.16.1"

oxigraph = { version = "0.5.3", features = ["rdf-12", "js"], default-features=false }

oxrdf = "0.3.0"

 shacl_rdf = "0.2.9"
 shacl_ir = "0.2.9"
 rudof_rdf = { version= "0.2.9", default-features = false }
 shacl_ast = "0.2.9"
 prefixmap = "0.2.9"
 iri_s = "0.2.9"
 shacl_validation = { version = "0.2.9", default-features = false, features = [] }

# shacl_rdf        = { path = "/home/silvius/Projects/rudof/shacl_rdf" }
# shacl_ir         = { path = "/home/silvius/Projects/rudof/shacl_ir" }
# rudof_rdf        = { path = "/home/silvius/Projects/rudof/rudof_rdf", default-features = false }
# shacl_ast        = { path = "/home/silvius/Projects/rudof/shacl_ast" }
# prefixmap        = { path = "/home/silvius/Projects/rudof/prefixmap" }
# iri_s            = { path = "/home/silvius/Projects/rudof/iri_s" }
# shacl_validation = { path = "/home/silvius/Projects/rudof/shacl_validation", default-features = false }
#
