[package]
name = "swls-lang-jsonld"
description = "JSON-LD language support for the Semantic Web Language Server"
keywords = ["lsp", "semantic-web", "rdf", "json-ld", "linked-data"]
categories = ["development-tools", "parser-implementations"]

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait.workspace  = true
bevy_ecs.workspace     = true
chumsky.workspace      = true
futures.workspace      = true
ropey.workspace        = true
serde_json.workspace   = true
sophia_api.workspace   = true
sophia_iri.workspace   = true
tracing.workspace      = true

swls-core = { workspace = true, features = ["shapes"] }

[dev-dependencies]
test-log        = { version = "0.2.19", features = ["trace"] }
swls-test-utils = { path = "../test-utils/" }
swls-lang-turtle = { path = "../lang-turtle/" }
