[package]
name = "swls-lang-jsonld"
description = "JSON-LD language support for the Semantic Web Language Server"
keywords = ["lsp", "semantic-web", "rdf", "json-ld", "linked-data"]
categories = ["development-tools", "parser-implementations"]

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
bevy_ecs.workspace       = true
futures.workspace        = true
rdf-parsers.workspace    = true
ropey.workspace          = true
rowan = "0.16.1"
tracing.workspace        = true

swls-core          = { workspace = true, features = ["shapes"] }
swls-lang-rdf-base = { workspace = true }
swls-lang-turtle   = { workspace = true }
swls-lov           = { workspace = true }

[dev-dependencies]
test-log        = { version = "0.2.19", features = ["trace"] }
swls-test-utils = { path = "../test-utils/" }
