[package]
name = "swls-lang-rdf-base"
description = "Shared setup helpers for RDF language support in swls"
keywords = ["lsp", "semantic-web", "rdf"]
categories = ["development-tools"]
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["swls-core/agnostic"]

[dependencies]
bevy_ecs.workspace = true
tracing.workspace = true
swls-core = { workspace = true, features = ["shapes"] }
