[package]
name = "lang-sparql"

authors = ["Arthur Vercruysse <arthur.vercruysse@outlook.com>"]
edition = "2021"
version = "0.1.0"

[dependencies]
async-trait.workspace  = true
bevy_ecs.workspace     = true
chumsky.workspace      = true
futures.workspace      = true
lazy_static.workspace  = true
logos.workspace = true
lsp-types.workspace    = true
ropey.workspace        = true
serde_json.workspace   = true
sophia_api.workspace   = true
sophia_iri.workspace   = true
tracing.workspace      = true

lang-turtle   = { path = "../lang-turtle/" }
lsp-core      = { path = "../core/" }
token-helpers = { path = "../token-helpers/" }
lov = { path = "../lov/" }

[dev-dependencies]
test-log   = { version = "0.2.16", features = ["trace"] }
test-utils = { path = "../test-utils/" }
