[package]
name = "swls-lang-sparql"
description = "SPARQL language support for the Semantic Web Language Server"
keywords = ["lsp", "semantic-web", "sparql", "rdf", "query"]
categories = ["development-tools", "parser-implementations"]

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait.workspace  = true
bevy_ecs.workspace     = true
chumsky.workspace      = true
futures.workspace      = true
lazy_static.workspace  = true
logos.workspace = true
ropey.workspace        = true
serde_json.workspace   = true
sophia_api.workspace   = true
sophia_iri.workspace   = true
tracing.workspace      = true
rowan = "0.16.1"

turtle = { path = "../turtle" }
swls-lang-turtle.workspace   = true
swls-core = { workspace = true, features = ["shapes"] }
swls-token-helpers.workspace = true
swls-lov.workspace           = true

[dev-dependencies]
test-log        = { version = "0.2.19", features = ["trace"] }
swls-test-utils = { path = "../test-utils/" }
