[package]
name = "swls-lang-turtle"
description = "Turtle/TriG language support for the Semantic Web Language Server"
keywords = ["lsp", "semantic-web", "rdf", "turtle", "trig"]
categories = ["development-tools", "parser-implementations"]

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait.workspace  = true
bevy_ecs.workspace     = true
bevy_tasks.workspace   = true
futures.workspace      = true
ropey.workspace        = true
serde.workspace        = true
serde_json.workspace   = true
similar.workspace = true
sophia_api.workspace   = true
sophia_iri.workspace   = true
tracing.workspace      = true

swls-lov.workspace           = true
swls-lang-rdf-base.workspace = true
swls-core = { workspace = true, features = ["shapes", "tokio"] }
turtle = { path = "../turtle" }
rowan   = "0.16.1"

[dev-dependencies]
test-log         = { version = "0.2.19", features = ["trace"] }
swls-test-utils  = { path = "../test-utils/" }
