
[package]
name = "swls-lov"
description = "Linked Open Vocabularies (LOV) data and types for the Semantic Web Language Server"
keywords = ["lsp", "semantic-web", "rdf", "lov", "ontology"]
categories = ["development-tools"]
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
bevy_ecs.workspace     = true
