[package]
name = "swls"
description = "Semantic Web Language Server — LSP server for Turtle, SPARQL, JSON-LD, and SHACL"
keywords = ["lsp", "semantic-web", "rdf", "sparql", "turtle"]
categories = ["development-tools", "command-line-utilities"]

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait.workspace  = true
bevy_ecs.workspace     = true
chumsky.workspace      = true
futures.workspace      = true
reqwest.workspace      = true
ropey.workspace        = true
serde_json.workspace   = true
sophia_api.workspace   = true
sophia_iri.workspace   = true
tower-lsp.workspace    = true
tracing.workspace      = true

swls-lang-jsonld.workspace = true
swls-lang-sparql.workspace = true
swls-lang-turtle.workspace = true
swls-core.workspace        = true

tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing-flame = "0.2.0"
glob = "0.3.3"

[features]
shapes = ["swls-core/shapes"]
default = ["tower-lsp/runtime-tokio"]
