[package]
name = "swls-test-utils"
description = "Test utilities for the Semantic Web Language Server"
publish = false

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
bevy_ecs.workspace     = true
chumsky.workspace      = true
futures.workspace      = true
ropey.workspace        = true
serde_json.workspace   = true
sophia_api.workspace   = true
tower-lsp.workspace    = true
tracing.workspace      = true

async-executor = "1.13.3"
async-std      = "1.13.2"

swls-core = { path = "../core/" }
glob = "0.3.3"
