[package]
name = "swls-token-helpers"
description = "Token parsing helpers for the Semantic Web Language Server"
keywords = ["lsp", "semantic-web", "parser", "token"]
categories = ["development-tools", "parser-implementations"]

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
chumsky.workspace      = true

swls-core = { path = "../core/" }

[dev-dependencies]
test-log   = { version = "0.2.19", features = ["trace"] }
swls-test-utils = { path = "../test-utils/" }
